--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,19 +1,20 @@
 <div class="orderBox row">
   <div class="col s12">
-    <h1>Eat Da Burger</h1>
+    <h1>Eat Da Burger
+   <img src= "burger.png" alt="Cartoon of a hamburger" width= "200" height= "200"></h1>
     <form class="create-form">
-      <h3><i class="far fa-clipboard fa-2x"> Order a burger</i></h3>
+      <h4><i class="fas fa-file"></i>Please type in your burger selection</h4>
       <div class="form-group">
-        <input type="text" id="bb" name="name" placeholder="Enter in a burger">
+        <input type="text" id="bb" name="name" placeholder="Enter your burger">
       </div>
 
-      <button class="btn waves-effect waves-light btn-large" type="submit" name="action">Submit Order</button>
+      <button class="btn waves-effect waves-light btn-medium" type="submit" name="action">Submit</button>
     </form>
   </div>
   {{!-- <div class="row"> --}}
     <div class="col s12">
       <div class="orderedbox">
-        <h2>Burgers ordered!</h2>
+        <h3>Burgers ordered!</h3>
         <ul>
           {{#each burgerdb}}
           {{#unless devoured}}
@@ -26,7 +27,7 @@
     <div class="col s12">
 
       <div class="orderagainbox">
-        <h2>Do you want to order again?</h2>
+        <h2>Would you like to order again?</h2>
         <ul>
           {{#each burgerdb}}
           {{#if devoured}}
