--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,35 +1,34 @@
 body {
-  background-image: url(".assets/img/restaurant.png");
+ 
+  margin: 0;
+  padding: 0;
 }
-
 h1 {
   text-align: center;
-  font-size: 10rem !important;
+  font-size: 8rem !important;
   padding: 10px !important;
-  font-family: 'Bangers', cursive;
-
+  font-family:'Pacifico', cursive;
+  color: black;
 }
-
 .orderBox{
   margin-top: 10% !important;
 }
 
 .row {
   
-  background-color: rgb(200, 151, 59);
   margin-bottom: 0% !important;
-  border: solid brown;
   margin-bottom: 10% !important;
 }
 
 button{
-  font-size: 3rem !important;
+  font-size: 30px !important;
+  
 }
 
 li {
   padding: 2%;
   margin: 2%;
-  background: #faebd7;
+  background: wheat;
   font-size: 3rem;
 }
 
@@ -38,9 +37,12 @@ li {
 }
 
 .col{
-  text-align: center;
+  background-image: url("./wood.jpg");
+  height: 100%;
+  width:100%
+  text-align:center;
+  
 }
-
 .create-form {
   padding: 20px !important;
   margin: 10px !important;
@@ -49,21 +51,46 @@ li {
 
 .form-group {
   margin-bottom: 20px;
-  background-color: whitesmoke;
-  margin-left: 10%;
+  background-color:wheat;
+  margin-left: 30%;
   margin-right: 10%;
+  width: 40%;
 }
 
 #bb {
   width: 100%;
-  height: 300px;
+  height: 100px;
   text-align: center;
-  font-size: 4rem;
+  font-size: 30px;
 }
 
 
 h2 {
   text-align: center;
-  font-family: 'Bangers', cursive;
-  font-size: 6rem !important;
+  font-family:'Pacifico', cursive;
+  font-size: 20px;
+  color: black;
+}
+ h3 {
+   text-align: center;
+   font-weight:700;
+   color: black;
+   font-family:'Pacifico', cursive; 
+ }
+
+ i {
+  color: black; 
+  
+ }
+
+ h4 {
+  text-align: center;
+  font-family:'Pacifico', cursive;
+  font-size: 20px;
+  color: black;
+}
+
+img {
+  margin-left: 80px;
+  padding-top:10px;
 }
