--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,13 @@
 	<script src="https://kit.fontawesome.com/257de25400.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/assets/js/jsburger.js"></script>
+
+		{{!-- <div class="row fixed-row-bottom">
+		<div class="footer">
+			<p class="copyright">Copyright 2020, all rights reserved</p>
+		</div>
+	</div> --}}
+
 </body>
 
 </html>
