--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,7 +1,17 @@
-body {
+html {
  
+  margin-top: -135px;
+  
+}
+body {
+  margin-bottom: 130px;
+  height:;
+}
+.footer {
+  background-color: brown;
+  width: auto;
+  height:100px;
   margin: 0;
-  padding: 0;
 }
 h1 {
   text-align: center;
@@ -38,7 +48,7 @@ li {
 
 .col{
   background-image: url("./wood.jpg");
-  height: 100%;
+  height: 550px;
   width:100%
   text-align:center;
   
@@ -93,4 +103,14 @@ h2 {
 img {
   margin-left: 80px;
   padding-top:10px;
+}
+.orderagainbox {
+  margin:0;
+  padding:0;
+}
+
+.orderedbox {
+  margin:0;
+  padding:0;
+  border: solid 4px black;
 }
