--- a/views/partials/b/b-block.handlebars
+++ b/views/partials/b/b-block.handlebars
@@ -5,6 +5,7 @@
 		{{#if devoured}}DEVOUR!{{else}}ORDER AGAIN{{/if}}
 	</button>
 
-	<button class="delete-btn btn waves-effect red lighten-1 btn-medium" type="submit" name="action" data-id="{{this.id}}">DELETE</button>
+	<button class="delete-btn btn waves-effect red lighten-1 btn-medium"   type="submit" name="action" data-id="{{this.id}}"
+	>DELETE<i class="large material-icons btn-delete">delete_forever</i></button>
 </li>
 
