add webpage img

--- a/views/partials/b/b-block.handlebars
+++ b/views/partials/b/b-block.handlebars
@@ -6,6 +6,6 @@
 	</button>
 
 	<button class="delete-btn btn waves-effect red lighten-1 btn-medium"   type="submit" name="action" data-id="{{this.id}}"
-	>DELETE<i class="large material-icons btn-delete">delete_forever</i></button>
+	>DELETE<i class="large material-icons btn-delete">delete</i></button>
 </li>
 
