modify img readme

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
 
   </div>
 
-
+{{!-- built-in helpers handlebars --}}
   <div class="col s12">
     <div class="orderedbox">
       <h3>Burgers ordered!</h3>
