--- a/views/partials/b/b-block.handlebars
+++ b/views/partials/b/b-block.handlebars
@@ -9,3 +9,4 @@
 	>DELETE<i class="large material-icons btn-delete">delete</i></button>
 </li>
 
+{{!-- above - else section - handlebars - built-in helpers --}}
